# minigrace

./: LICENSE  minigrace.cabal  run-1.sh  run-ghcid.sh  shell.nix
minigrace-1/: Context.hs  Evaluate.hs  Infer.hs  Interpret.hs  Syntax.hs  Type.hs  main.hs
