cabal-version:       >=1.10
name:                minigrace
version:             0.0.1
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

executable minigrace-1
  main-is:             main.hs
  build-depends:       base
  hs-source-dirs:      minigrace-1/
  default-language:    Haskell2010
